clusters/oracle-cluster/apps/zabbix/zabbix-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web-service
  namespace: zabbix
spec:
  selector:
    app: zabbix-web
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
